@@ -57,12 +57,13 @@ void MediaSettings::reset() {
 
 	speed = 1.0;
 
-	phase_filter = FALSE;
+	phase_filter = false;
     current_denoiser = NoDenoise;
-    deblock_filter = FALSE;
-	dering_filter = FALSE;
-	noise_filter = FALSE;
+    deblock_filter = false;
+	dering_filter = false;
+	noise_filter = false;
 	postprocessing_filter = pref->initial_postprocessing;
+	upscaling_filter = false;
 
 	current_deinterlacer = NoDeinterlace;
 
@@ -142,6 +143,7 @@ void MediaSettings::list() {
 	qDebug("  dering_filter: %d", dering_filter);
 	qDebug("  noise_filter: %d", noise_filter);
 	qDebug("  postprocessing_filter: %d", postprocessing_filter);
+	qDebug("  upscaling_filter: %d", upscaling_filter);
 
 	qDebug("  current_deinterlacer: %d", current_deinterlacer);
 #if NEW_ASPECT_CODE
@@ -220,6 +222,7 @@ void MediaSettings::save(QSettings * set) {
 	set->setValue( "dering_filter", dering_filter);
 	set->setValue( "noise_filter", noise_filter);
 	set->setValue( "postprocessing_filter", postprocessing_filter);
+	set->setValue( "upscaling_filter", upscaling_filter);
 
 	set->setValue( "current_deinterlacer", current_deinterlacer);
 #if NEW_ASPECT_CODE
@@ -299,6 +302,7 @@ void MediaSettings::load(QSettings * set) {
 	dering_filter = set->value( "dering_filter", dering_filter).toBool();
 	noise_filter = set->value( "noise_filter", noise_filter).toBool();
 	postprocessing_filter = set->value( "postprocessing_filter", postprocessing_filter).toBool();
+	upscaling_filter = set->value( "upscaling_filter", upscaling_filter).toBool();
 
 	current_deinterlacer = set->value( "current_deinterlacer", current_deinterlacer ).toInt();
 #if NEW_ASPECT_CODE
